--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                     <div class="role brown-text text-darken-2">Laboratory Automation Intern</div>
                     <ul>
                         <li>Operated, maintained, and troubleshot multiple automated platforms with robot manipulators for high-throughput chemical compound screening.</li>
-                        <li><b>Automated Syringe Dipping System</b></li>
+                        <li><b>Automated Affinity Selection Mass Spectrometry System</b></li>
                         <div style="margin-left: 1.5rem;">
                         <li>Designed an automated system for affinity testing by enabling a robotic arm to precisely position 96-well plates under a fixed mass spectrometer syringe.</li>
                         <li>Developed end-to-end automation for plate insertion for dipping selected wells to streamline solution concentration analysis.</li>
