--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <div style="margin-left: 1.5rem;">
                         <li>Engineered a Capper-Decapper system to streamline vial processing by integrating it with the Meca500 robotic arm, ensuring seamless vial handling without manual intervention.</li>
                         <li>The vials and gripped and rotated with same actuator. Circular wedge design enable the system to grip vial when pushed from top, and release vials after the capping/decapping is completed.</li>
-                        <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining.</li>
+                        <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining, Arduino.</li>
                     </div>
 
                     <li><b>Glove Box Automation</b></li>
@@ -644,7 +644,7 @@
                         </div>
                         <div class="role brown-text text-darken-2">Jan 2022 – May 2022</div>
                         <ul>
-                            <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
+                            <li>Implemented voice, face, and ID recognition for mixing and serving drinks using a robotic arm.</li>
 
                             <!-- Third and Fourth Images Side-by-Side -->
                             <div class="row">
@@ -699,7 +699,7 @@
 
                             <li>Integrated tactile sensors for gripping, ultrasound sensors, and developed algorithms for a 5-DOF series manipulator.</li>
                             <li>Used ROS, Arduino, Raspberry Pi, and Nvidia Jetson to control the robotic system.</li>
-                            <li><b>Technologies used:</b> ROS, OpenCV, Machine Learning, Arduino, Raspberry Pi, Nvidia Jetson</li>
+                            <li><b>Technologies used:</b> Python, OpenCV, Arduino, Raspberry Pi</li>
                         </ul>
                     </div>
                 </div>
